fix(theme): remove wrong height property

--- a/packages/docsearch-theme-light/src/index.css
+++ b/packages/docsearch-theme-light/src/index.css
@@ -128,7 +128,6 @@
   right: 0;
   scrollbar-width: none; /* Firefox */
   width: 100%;
-  height: 100%;
   min-height: max-content;
 }
 
@@ -170,22 +169,6 @@
 }
 
 /* Items */
-
-/*
-.algolia-docsearch-item::after {
-  background: linear-gradient(
-    -90deg,
-    rgba(197, 201, 224, 0) 0%,
-    rgb(197, 201, 224) 51%,
-    rgba(197, 201, 224, 0) 100%
-  );
-  content: '';
-  display: block;
-  height: 1px;
-  margin: 1.5rem 0;
-  width: 484px;
-}
-*/
 
 .algolia-docsearch-item {
   margin-bottom: 1rem;
